update to staff

--- a/admin_app/templates/admin_app/aa_dashboard.html
+++ b/admin_app/templates/admin_app/aa_dashboard.html
@@ -11,7 +11,7 @@
     <div class="card text-bg-dark mb-3" style="width: 100%;">
         <div class="card-header"></div>
         <div class="card-body">
-            <a href="{% url 'aa_clients' %}" class="">View Clients</a>
+            <a href="{% url 'aa_clients_list' %}" class="">View Clients</a>
         </div>
         <div class="card-footer"></div>
     </div>
