--- a/admin_app/templates/admin_app/clients/aa_client_read.html
+++ b/admin_app/templates/admin_app/clients/aa_client_read.html
@@ -39,7 +39,7 @@
                     <h3 class="h_text">Staff</h3></div>
                 <div class="card-body"></div>
                 <div class="card-footer">
-                    <a href="" class="btn btn-info">Go</a>
+                    <a href="{% url "aa_staff_list" user.id %}" class="btn btn-info">Go</a>
                 </div>
             </div>
             <div class="card text-bg-dark m-3">
