--- a/admin_app/templates/admin_app/clients/aa_clients_list.html
+++ b/admin_app/templates/admin_app/clients/aa_clients_list.html
@@ -26,8 +26,8 @@
                 <tr>
                     <td><a href="{% url "aa_client_read" user.id %}">{{ user.username }}</a></td>
                     <td><a href="/manage/client_docs/{{user.id}}">View</a></td>
-                    <td><a href="{% url 'admin_equipment' user.id%}">View</a></td>
-                    <td><a href="{% url 'admin_competency' user.id%}">View</a></td>
+                    <td><a href="">View</a></td>
+                    <td><a href="">View</a></td>
                     <td><a href="{{ user.id }}">Edit</a></td>
                 </tr>
                 {% endfor %}
