--- a/admin_app/templates/admin_app/staff/aa_staff_create.html
+++ b/admin_app/templates/admin_app/staff/aa_staff_create.html
@@ -19,6 +19,9 @@
 
         <button type="submit" class="btn btn-primary mt-3">Save</button>
     </form>
+
+    <a href="{% url "aa_staff_list" user.id %}" class="btn btn-info">Back</a>
+
 </div>
 
 
