--- a/admin_app/templates/admin_app/staff/aa_staff_list.html
+++ b/admin_app/templates/admin_app/staff/aa_staff_list.html
@@ -28,7 +28,8 @@
             {% endfor %}
         </tbody>
     </table>
-    <a class="btn btn-info" href="{% url "aa_staff_create" user %}">Add</a>
+    <a class="btn btn-success" href="{% url "aa_staff_create" user %}">Add</a>
+    <a class="btn btn-info" href="{% url "aa_client_read" user %}">Back</a>
 </div>
 
 
